# jrebel-license-server

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
src/jrebel/: __init__.py  app.py  config.py  main.py
src/jrebel/api/: __init__.py  deps.py  router.py
src/jrebel/api/routes/: __init__.py  health.py  jrebel.py  rpc.py
src/jrebel/core/: __init__.py
src/jrebel/core/crypto/: __init__.py  keys.py  signer.py
src/jrebel/models/: __init__.py  schemas.py
src/jrebel/services/: __init__.py  license.py
src/jrebel/templates/: index.html
tests/: test_app.py
